// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > is displayed correctly > with a slot 1`] = `
"<button class="h-12 flex items-center justify-between">
  <div class="flex items-center gap-4 [&amp;>.iconify]:!size-7">
    <p>Test</p>
  </div>
  <!--v-if-->
</button>"
`;

exports[`Button > is displayed correctly > with an chevron-right icon 1`] = `
"<button class="h-12 flex items-center justify-between">
  <div class="flex items-center gap-4 [&amp;>.iconify]:!size-7">
    <p>Test</p>
  </div><span class="iconify i-tabler:chevron-right !size-5" aria-hidden="true"></span>
</button>"
`;

exports[`Button > is displayed correctly > without a slot 1`] = `
"<button class="h-12 flex items-center justify-between">
  <div class="flex items-center gap-4 [&amp;>.iconify]:!size-7"></div>
  <!--v-if-->
</button>"
`;
